--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home: 首页</title>
+	<title>Home</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,12 +17,14 @@
 		<a href="./pages/various/any">Misc.</a>
 	</div>
 
-	<div id="Content">
-		<h2>Some content goes here...</h2>
-		<div class="container">
-			<p>A website record various stuff.
-			<p>Idk how to fill this website.
-		</div>
-	</div>
+    <div id="Grid">
+	    <div class="content">
+		    <h2>Some content goes here...</h2>
+		    <div class="container">
+			    <p>A website record various stuff.
+			    <p>Idk how to fill this website.
+		    </div>
+	    </div>
+    </div>
 </body>
 </html>
