--- a/pages/arch/arch_install.html
+++ b/pages/arch/arch_install.html
@@ -17,7 +17,7 @@
 		<a href="./arch_extra">Arch: Others</a>
 	</div>
 	
-	<div id='Content'>
+	<div class='content'>
         <h1>Archlinux installation</h1>
         <h2>Notes:</h2>
 		<div class="container">
