--- a/pages/various/any.html
+++ b/pages/various/any.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Various: 杂事</title>
+	<title>Various</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,33 +12,35 @@
 </head>
 
 <body>
-	<div id="Content">
-        <h2>About wine</h2>
-        <div class="container">
-            <p>wine-stable + winetricks is enough.
-            <p>Run <u>winecfg</u> to generate '.wine' folder(which stores an windows 'sandbox').
-            <p>Maybe you want to change the dpi, so go to graphics->screen resolution.
-            <p>And change it to a prefer value.
+    <div id="Grid">
+	    <div class="content">
+            <h2>About wine</h2>
+            <div class="container">
+                <p>wine-stable + winetricks is enough.
+                <p>Run <u>winecfg</u> to generate '.wine' folder(which stores an windows 'sandbox').
+                <p>Maybe you want to change the dpi, so go to graphics->screen resolution.
+                <p>And change it to a prefer value.
 
-            <br><br>
+                <br><br>
 
-            <p>Run <u>winetricks dotnet45</u>, and done.
-        </div>
+                <p>Run <u>winetricks dotnet45</u>, and done.
+            </div>
 
-		<h2>Gimp things</h2>
-		<div class="container">
-			<p>Some denoise and sharpen things:
-			<p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
-			<p>Filters-&gt;Blur-&gt;Median Blur
-            <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
-			<p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
-		</div>
-		
-		<h2>Fixing stuff(I'm not sure good or bad)</h2>
-		<div class="container">
-            <p>:Kano:</p>
-			<p>Mediafire: <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">Download</a></p>
-		</div>
-	</div>
+		    <h2>Gimp things</h2>
+		    <div class="container">
+			    <p>Some denoise and sharpen things:
+			    <p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
+			    <p>Filters-&gt;Blur-&gt;Median Blur
+                <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
+			    <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
+		    </div>
+		    
+		    <h2>Fixing stuff(I'm not sure good or bad)</h2>
+		    <div class="container">
+                <p>:Kano:</p>
+			    <p>Mediafire: <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">Download</a></p>
+		    </div>
+	    </div>
+    </div>
 </body>
 </html>
