--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -66,14 +66,14 @@
 
             <h2>Something like "Stable vs Lazer"</h2>        
             <div class="container">
-                <p>I would stay at stable.
+                <p>I would stay at stable(may stay at Lazer in future).
                 <p>I'd say Lazer is still not playable, though the key sounds correct and clear(while typing),
-                <p>but the approach things look so weird(reading so weird), still not better than stable.
-                <p>And I don't need bunches of fr**king options(in setting).
-                <p>Also, hp drain confused me, like Lazer is easy than stable.
+                <p>but the approach things/visual things looks weird(not too much), not comfort than stable.
+                <p>And I don't need bunches of fr**king options(in setting) and so many useless buttons(on the top).
+                <p>Also, hp drain confused me, like Lazer is easy than Stable.
+                <p>When you use Lazer, if you listen carefully, you'll find that audio sounds suck(not clear).
                 <p>Stable's key sounds messing(not clear).
                 <p>At least Stable got a nice gaming.
-                <p>I can't play lazer well, its just bad.
             </div>
 	    </div>
     </div>
