--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -57,7 +57,7 @@
 
                 <br><br>
 
-                <p>2. Download beatmap smoothly(sadly I can't use this anymore XP).
+                <p>2. Download beatmap smoothly(sadly I can't use this anymore).
                 <p>Now go to <a href="https://github.com/KyuubiRan/BeatmapDownloader">this</a> website.
                 <p>Go to releases(on the right of website), download "Release-x86.zip".
                 <p>Make a directory inside your osu folder like "Injector"
@@ -66,16 +66,38 @@
 
             <h2>Something like "Stable vs Lazer"</h2>        
             <div class="container">
-                <p>I would stay at stable(may stay at Lazer in future).
-                <p>I'd say Lazer is still not playable, though the key sounds correct and clear(while typing),
-                <p>but the approach things/visual things looks weird(not too much), not comfort than stable.
-                <p>And I don't need bunches of fr**king options(in setting) and so many useless buttons(on the top).
-                <p>Also, hp drain confused me, like Lazer is easy than Stable.
-                <p>When you use Lazer, if you listen carefully, you'll find that audio sounds suck(not clear).
-                <p>Stable's key sounds messing(not clear).
-                <p>At least Stable got a nice gaming.
+                <p>When you get well with Stable,
+                <p>you'll find that hard to read Lazer now(not sure, my personal option).
+                <p>Stable got a comfort approach circle, nice view(kind soft and focus).
+                <p>Lazer seems like more focus on rhythm(device and hitsounds rhythm).
+                <p>But I don't need so many buttons/options under Lazer.
+                <p>The problem under Lazer is high delay when in a multiplayer server.   
             </div>
 	    </div>
+    </div>
+    <div id="Grid">
+        <div class="content">
+            <h1>The players</h1>
+            <h2>The players attitude</h2>
+            <div class="container">
+                <p>70% players trash.
+                <p>Like request modding maps, I send a request.
+                <p>They don't care(70%), or refuse your request(30%), since my map fit the rules.
+                <p>They are such a lazy worm don't even add "no newble mapper".
+                <p>In multiplayer, I've always kicked by those little shit hosts.
+                <p>If you play well, they'll also kick you.
+                <p>Then why public?
+                <p>They are such a selfless person. <i>*sign*</i>
+            </div>
+
+            <h2>Being host</h2>
+            <div class="container">
+                <p>Don't care about what players said.
+                <p>Start on a proper time(30~40secs+10secs for addition ).
+                <p>Since I met a situlation: shall I wait for the bad Internet players?
+                <p>It's a pretty nice question.
+            </div>
+        </div>
     </div>
 </body>
 </html>
