--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -14,10 +14,11 @@
 <body>
     <div id="Grid">
 	    <div class="content">
-            <h1>About setup</h1>		
+            <h1>About setup</h1>	
             <h2>Intro</h2>
 		    <div class="container">
-			    <p>Setup:
+                <p>Virus broke my osu skill, pain broke my mind, quit for sometime.
+                <p>Setup:
 			    <p>&emsp;Mouse: Logitech G102 (2 accel);
 			    <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
                 <p>&emsp;Resolution: 1920x1080, 15&quot;6			
@@ -87,7 +88,8 @@
                 <p>In multiplayer, I've always kicked by those little shit hosts.
                 <p>If you play well, they'll also kick you.
                 <p>Then why public?
-                <p>They are such a selfless person. <i>*sign*</i>
+                <p>Btw they're boring too(I hate farms).
+                <p>They are such a selfish person. <i>*sign*</i>
             </div>
 
             <h2>Being host</h2>
