--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -17,7 +17,7 @@
             <h1>About setup</h1>	
             <h2>Intro</h2>
 		    <div class="container">
-                <p>Virus broke my osu skill, pain broke my mind, quit for sometime.
+                <p>Virus broke my osu skill, quit for sometime.
                 <p>Setup:
 			    <p>&emsp;Mouse: Logitech G102 (2 accel);
 			    <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
