--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -17,13 +17,13 @@
             <h1>About setup</h1>	
             <h2>Intro</h2>
 		    <div class="container">
-                <p>Virus broke my osu skill, quit for sometime.
                 <p>Setup:
 			    <p>&emsp;Mouse: Logitech G102 (2 accel);
 			    <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
                 <p>&emsp;Resolution: 1920x1080, 15&quot;6			
                 <p>&emsp;Typing: Alternate;
 			    <p>&emsp;Skin(made by me): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
+                <p>&emsp;Maps I prefer: Except EZ + low ar + farm + hyper tech, I enjoy all maps.
             </div>
 
 		    <h2>Mouse config</h2>
@@ -81,18 +81,16 @@
             <h1>The players</h1>
             <h2>The players attitude</h2>
             <div class="container">
-                <p>70% players trash.
+                <p>Nah, selfish and boring.
                 <p>Like request modding maps, I send a request.
                 <p>They don't care(70%), or refuse your request(30%), since my map fit the rules.
-                <p>They are such a lazy worm don't even add "no newble mapper".
-                <p>In multiplayer, I've always kicked by those little shit hosts.
+                <p>In multiplayer, I've always kicked by those sh1t hosts.
                 <p>If you play well, they'll also kick you.
                 <p>Then why public?
                 <p>Btw they're boring too(I hate farms).
-                <p>They are such a selfish person. <i>*sign*</i>
             </div>
 
-            <h2>Being host</h2>
+            <h2>Being host(in public server)</h2>
             <div class="container">
                 <p>Don't care about what players said.
                 <p>Start on a proper time(30~40secs+10secs for addition ).
