--- a/pages/arch/arch_extra.html
+++ b/pages/arch/arch_extra.html
@@ -20,6 +20,7 @@
 
     <div id="Grid">
 	    <div class="content">
+            <h1>Wine on arch linux</h1>
 		    <h2>Execute dot exe files</h2>
 		    <div class="container">
 			    <p>vim /etc/pacman.conf
