--- a/pages/various/any.html
+++ b/pages/various/any.html
@@ -28,17 +28,22 @@
 
 		    <h2>Gimp things</h2>
 		    <div class="container">
-			    <p>Some denoise and sharpen things:
+                <p>Smudge tool can move the pixels to correct position.
+                <p>Sometimes Path tool is better than Free select.
+
+                <br><br>
+
+			    <p>Denoise and sharpen things:
 			    <p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
 			    <p>Filters-&gt;Blur-&gt;Median Blur
                 <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
 			    <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
 		    </div>
 		    
-		    <h2>Fixing stuff(I'm not sure good or bad)</h2>
+		    <h2>Fixing stuff(Wont update)</h2>
 		    <div class="container">
-                <p>:Kano:</p>
-			    <p>Mediafire: <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">Download</a></p>
+                <p>1:</p>
+			    <p>Download <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">here</a></p>
 		    </div>
 	    </div>
     </div>
