--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -23,7 +23,7 @@
                 <p>&emsp;Resolution: 1920x1080, 15&quot;6			
                 <p>&emsp;Typing: Alternate;
 			    <p>&emsp;Skin(made by me): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
-                <p>&emsp;Maps I prefer: Except EZ + low ar + farm + hyper tech, I enjoy all maps.
+                <p>&emsp;Maps I prefer: Except EZ + low ar + farms(usually I'll add nf+hd) + hyper tech, I enjoy all maps.
             </div>
 
 		    <h2>Mouse config</h2>
