--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -22,7 +22,7 @@
 			    <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
                 <p>&emsp;Resolution: 1920x1080, 15&quot;6			
                 <p>&emsp;Typing: Alternate;
-			    <p>&emsp;Skin(made by me): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
+			    <p>&emsp;Skin(made by me, update occasionally): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
                 <p>&emsp;Maps I prefer: Except EZ + low ar + farms(usually I'll add nf+hd) + hyper tech, I enjoy all maps.
             </div>
 
