--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -14,7 +14,7 @@
 <body>
     <div id="Grid">
 	    <div class="content">
-            <h1>About setup</h1>	
+            <h1>Setup & Preference</h1>	
             <h2>Intro</h2>
 		    <div class="container">
                 <p>Setup:
@@ -23,8 +23,7 @@
                 <p>&emsp;Resolution: 1920x1080, 15&quot;6			
                 <p>&emsp;Typing: Alternate;
 			    <p>&emsp;Skin(made by me, update occasionally): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
-                <p>&emsp;Maps I prefer: Except EZ + low ar + farms(usually I'll add nf+hd) + hyper tech, I enjoy all maps.
-            </div>
+        </div>
 
 		    <h2>Mouse config</h2>
 		    <div class="container">
@@ -37,6 +36,13 @@
 			    <p>&emsp;Option "AccelSpeed" "0"
 			    <p>EndSection
 		    </div>
+
+            <h2>Maps</h2>
+            <div class="container">            
+                <p>Bpm: normally ~120-180, acceptable ~60-240 
+                <p>Type: Except ez, low ar(<7), old, the "classic" farms(usually I'll add nf+hd), I enjoy all other maps.
+                <p>Mapping so hard(and complex)...
+            </div>
         </div>
 	    <div id="focus" class="content">
             <h1>Misc.</h1>
@@ -81,7 +87,7 @@
             <h1>The players</h1>
             <h2>The players attitude</h2>
             <div class="container">
-                <p>Nah, selfish and boring.
+                <p>Not quite nice.
                 <p>Like request modding maps, I send a request.
                 <p>They don't care(70%), or refuse your request(30%), since my map fit the rules.
                 <p>In multiplayer, I've always kicked by those sh1t hosts.
