--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -39,9 +39,8 @@
 
             <h2>Maps</h2>
             <div class="container">            
-                <p>Bpm: normally ~120-180, acceptable ~60-240 
-                <p>Type: Except ez, low ar(<7), old, the "classic" farms(usually I'll add nf+hd), I enjoy all other maps.
-                <p>Mapping so hard(and complex)...
+                <p>Except ez, low ar(<7), old,
+                <p>the "classic" farms(usually I'll add nf+hd), I enjoy all other maps.
             </div>
         </div>
 	    <div id="focus" class="content">
