--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -39,8 +39,9 @@
 
             <h2>Maps</h2>
             <div class="container">            
-                <p>Except ez, low ar(<7), old,
-                <p>the "classic" farms(usually I'll add nf+hd), I enjoy all other maps.
+                <p>Except ez, low ar(&lt;7), old,
+                <p>the "classic" farms, usually I enjoy all other maps,
+                <p>but I still prefer maps I like.
             </div>
         </div>
 	    <div id="focus" class="content">
@@ -72,20 +73,18 @@
 
             <h2>Something like "Stable vs Lazer"</h2>        
             <div class="container">
-                <p>When you get well with Stable,
-                <p>you'll find that hard to read Lazer now(not sure, my personal option).
-                <p>Stable got a comfort approach circle, nice view(kind soft and focus).
-                <p>Lazer seems like more focus on rhythm(device and hitsounds rhythm).
-                <p>But I don't need so many buttons/options under Lazer.
-                <p>The problem under Lazer is high delay when in a multiplayer server.   
-            </div>
+                <p>I can't think of any advantages of Stable, or maybe skin is an virtue?
+                <p>Lazer either, It's just too common. <i>where's my skin interface?</i>
+                <p>Both of them are 'incomplete' project.
+           </div>
 	    </div>
     </div>
     <div id="Grid">
         <div class="content">
-            <h1>The players</h1>
-            <h2>The players attitude</h2>
+            <h1>Players and some jAk01i5a&j</h1>
+            <h2>a</h2>
             <div class="container">
+                <p>2025-01-09
                 <p>Not quite nice.
                 <p>Like request modding maps, I send a request.
                 <p>They don't care(70%), or refuse your request(30%), since my map fit the rules.
@@ -93,14 +92,13 @@
                 <p>If you play well, they'll also kick you.
                 <p>Then why public?
                 <p>Btw they're boring too(I hate farms).
-            </div>
 
-            <h2>Being host(in public server)</h2>
-            <div class="container">
-                <p>Don't care about what players said.
-                <p>Start on a proper time(30~40secs+10secs for addition ).
-                <p>Since I met a situlation: shall I wait for the bad Internet players?
-                <p>It's a pretty nice question.
+                <br><br>
+
+                <p>2025-01-29
+                <p>There're always nice or bad players, like society or network.
+                <p>I won't put all my time on this pink circle.
+                <p>There are so many things to do in my life.
             </div>
         </div>
     </div>
