--- a/pages/various/any.html
+++ b/pages/various/any.html
@@ -40,10 +40,9 @@
 			    <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
 		    </div>
 		    
-		    <h2>Fixing stuff(Wont update)</h2>
+		    <h2>Fav pictures</h2>
 		    <div class="container">
-                <p>1:</p>
-			    <p>Download <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">here</a></p>
+			    <p>Download <a href="https://mediafire.com/folder/mj9uqfehwpzr0/Fav">here</a></p>
 		    </div>
 	    </div>
     </div>
