--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -17,6 +17,11 @@
             <h1>Setup & Preference</h1>	
             <h2>Intro</h2>
 		    <div class="container">
+                <p>Sadly things that I almost reach at the end(global rank in ~200000)
+                <p>I really lost a lot interest in it...
+
+                <br><br>
+
                 <p>Setup:
 			    <p>&emsp;Mouse: Logitech G102 (2 accel);
 			    <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
@@ -38,10 +43,11 @@
 		    </div>
 
             <h2>Maps</h2>
-            <div class="container">            
-                <p>Except ez, low ar(&lt;7), old,
+            <div class="container">
+                <p>Except ez, low ar(&lt;~8), old,
                 <p>the "classic" farms, usually I enjoy all other maps,
                 <p>but I still prefer maps I like.
+                <p id="tiny">why there're so many tv sizes... I dont want to be that...
             </div>
         </div>
 	    <div id="focus" class="content">
@@ -78,29 +84,6 @@
                 <p>Both of them are 'incomplete' project.
            </div>
 	    </div>
-    </div>
-    <div id="Grid">
-        <div class="content">
-            <h1>Players and some jAk01i5a&j</h1>
-            <h2>a</h2>
-            <div class="container">
-                <p>2025-01-09
-                <p>Not quite nice.
-                <p>Like request modding maps, I send a request.
-                <p>They don't care(70%), or refuse your request(30%), since my map fit the rules.
-                <p>In multiplayer, I've always kicked by those sh1t hosts.
-                <p>If you play well, they'll also kick you.
-                <p>Then why public?
-                <p>Btw they're boring too(I hate farms).
-
-                <br><br>
-
-                <p>2025-01-29
-                <p>There're always nice or bad players, like society or network.
-                <p>I won't put all my time on this pink circle.
-                <p>There are so many things to do in my life.
-            </div>
-        </div>
     </div>
 </body>
 </html>
