--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Osu infos</title>
+    <title>Osu infos</title>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="stylesheet" type="text/css" href="../../decorate/main.css">
-	
-	<script type="text/javascript" src="../../function/main.js" defer></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="../../decorate/main.css">
+
+    <script type="text/javascript" src="../../function/main.js" defer></script>
 </head>
 
 <body>
     <div id="Grid">
-	    <div class="content">
-            <h1>Setup & Preference</h1>	
+        <div class="content">
+            <h1>Setup & Preference</h1> 
             <h2>Intro</h2>
-		    <div class="container">
+            <div class="container">
                 <p>Sadly things that I almost reach at the end(global rank in ~200000)
                 <p>I really lost a lot interest in it...
 
                 <br><br>
 
                 <p>Setup:
-			    <p>&emsp;Mouse: Logitech G102 (2 accel);
-			    <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
-                <p>&emsp;Resolution: 1920x1080, 15&quot;6			
+                <p>&emsp;Mouse: Logitech G102 (2 accel);
+                <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
+                <p>&emsp;Resolution: 1920x1080, 15&quot;6           
                 <p>&emsp;Typing: Alternate;
-			    <p>&emsp;Skin(made by me, update occasionally): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
+                <p>&emsp;Skin(made by me, update occasionally): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>   
         </div>
 
-		    <h2>Mouse config</h2>
-		    <div class="container">
-			    <p>File: 50-mouse-acceleration.conf
-			    <p>Section "InputClass"
-			    <p>&emsp;Identifier ""
-			    <p>&emsp;Driver "libinput"
-			    <p>&emsp;MatchIsPointer "yes"
-			    <p>&emsp;Option "AccelProfile" "flat"
-			    <p>&emsp;Option "AccelSpeed" "0"
-			    <p>EndSection
-		    </div>
+            <h2>Mouse config</h2>
+            <div class="container">
+                <p>File: 50-mouse-acceleration.conf
+                <p>Section "InputClass"
+                <p>&emsp;Identifier ""
+                <p>&emsp;Driver "libinput"
+                <p>&emsp;MatchIsPointer "yes"
+                <p>&emsp;Option "AccelProfile" "flat"
+                <p>&emsp;Option "AccelSpeed" "0"
+                <p>EndSection
+            </div>
 
             <h2>Maps</h2>
             <div class="container">
@@ -50,7 +50,7 @@
                 <p id="tiny">why there're so many tv sizes... I dont want to be that...
             </div>
         </div>
-	    <div id="focus" class="content">
+        <div id="focus" class="content">
             <h1>Misc.</h1>
             <h2>A method to boost your Internet(maybe)</h2>
             <div class="container">
@@ -77,13 +77,13 @@
                 <p>Unzip Release-x86.zip, move Downloader.dll and Injector.exe to directory you've been created.
             </div>
 
-            <h2>Something like "Stable vs Lazer"</h2>        
+            <h2>Something like "Stable vs Lazer"</h2>
             <div class="container">
                 <p>I can't think of any advantages of Stable, or maybe skin is an virtue?
-                <p>Lazer either, It's just too common. <i>where's my skin interface?</i>
+                <p>Lazer either, It's just too common. <span id="tiny">where's my skin interface?</span>
                 <p>Both of them are 'incomplete' project.
            </div>
-	    </div>
+        </div>
     </div>
 </body>
 </html>
