--- a/pages/various/any.html
+++ b/pages/various/any.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Various</title>
+    <title>Various</title>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="stylesheet" type="text/css" href="../../decorate/main.css">
-	
-	<script type="text/javascript" src="../../function/main.js" defer></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="../../decorate/main.css">
+
+    <script type="text/javascript" src="../../function/main.js" defer></script>
 </head>
 
 <body>
     <div id="Grid">
-	    <div class="content">
+        <div class="content">
             <h2>About wine</h2>
             <div class="container">
                 <p>wine-stable + winetricks is enough.
                 <p>Run <u>winecfg</u> to generate '.wine' folder(which stores an windows 'sandbox').
-                <p>Maybe you want to change the dpi, so go to graphics->screen resolution.
+                <p>Maybe you want to change the dpi, so go to graphics-&gt;screen resolution.
                 <p>And change it to a prefer value.
 
                 <br><br>
@@ -26,25 +26,25 @@
                 <p>Run <u>winetricks dotnet45</u>, and done.
             </div>
 
-		    <h2>Gimp things</h2>
-		    <div class="container">
+            <h2>Gimp things</h2>
+            <div class="container">
                 <p>Smudge tool can move the pixels to correct position.
                 <p>Sometimes Path tool is better than Free select.
 
                 <br><br>
 
-			    <p>Denoise and sharpen things:
-			    <p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
-			    <p>Filters-&gt;Blur-&gt;Median Blur
+                <p>Denoise and sharpen things:
+                <p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
+                <p>Filters-&gt;Blur-&gt;Median Blur
                 <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
-			    <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
-		    </div>
-		    
-		    <h2>Fav pictures</h2>
-		    <div class="container">
-			    <p>Download <a href="https://mediafire.com/folder/mj9uqfehwpzr0/Fav">here</a></p>
-		    </div>
-	    </div>
+                <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
+            </div>
+
+            <h2>Fav pictures</h2>
+            <div class="container">
+                <p>Download <a href="https://mediafire.com/folder/mj9uqfehwpzr0/Fav">here</a></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
