--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -17,18 +17,13 @@
             <h1>Setup & Preference</h1> 
             <h2>Intro</h2>
             <div class="container">
-                <p>Sadly things that I almost reach at the end(global rank in ~200000)
-                <p>I really lost a lot interest in it...
-
-                <br><br>
-
                 <p>Setup:
                 <p>&emsp;Mouse: Logitech G102 (2 accel);
                 <p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
-                <p>&emsp;Resolution: 1920x1080, 15&quot;6           
+                <p>&emsp;Resolution: 1920x1080, 15&quot;6
                 <p>&emsp;Typing: Alternate;
                 <p>&emsp;Skin(made by me, update occasionally): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>   
-        </div>
+            </div>
 
             <h2>Mouse config</h2>
             <div class="container">
@@ -41,17 +36,10 @@
                 <p>&emsp;Option "AccelSpeed" "0"
                 <p>EndSection
             </div>
-
-            <h2>Maps</h2>
-            <div class="container">
-                <p>Except ez, low ar(&lt;~8), old,
-                <p>the "classic" farms, usually I enjoy all other maps,
-                <p>but I still prefer maps I like.
-                <p id="tiny">why there're so many tv sizes... I dont want to be that...
-            </div>
         </div>
+
         <div id="focus" class="content">
-            <h1>Misc.</h1>
+            <h1>Fast connection</h1>
             <h2>A method to boost your Internet(maybe)</h2>
             <div class="container">
                 <p>Since it's pretty slow to access osu website(me in China),
@@ -75,6 +63,33 @@
                 <p>Go to releases(on the right of website), download "Release-x86.zip".
                 <p>Make a directory inside your osu folder like "Injector"
                 <p>Unzip Release-x86.zip, move Downloader.dll and Injector.exe to directory you've been created.
+            </div>
+        </div>
+    </div>
+
+    <div id="Grid">
+        <div class="content">
+            <h1>Misc.</h1>
+            <h2>Maps</h2>
+            <div class="container">
+                <p>1. (not only)Enjoy maps
+                <p>Except ez, low ar(&lt;~8), old,
+                <p>the "classic" farms, usually I enjoy all other maps,
+                <p>but I still prefer maps I like.
+                <p id="tiny">why there're so many tv sizes... I dont want to be that...
+
+                <br><br>
+
+                <p>2. (but also)Map songs
+                <p>Link for mod: https://osumod.com/
+                <p>Dont be sad/influenced on rejects, always trust they are shit.
+                <p>Be strong(get rank), be mrekk(get attention).
+
+                <br><br>
+
+                <p><b>Never request a modding queue which makes you uncomfortable</b>,
+                <p>such as "I mod what I like" or "long article of rules" or "a bunch of reject tags",
+                <p>always find easy queue like "casual" or "for newble" or "known BNs/GMT".
             </div>
 
             <h2>Something like "Stable vs Lazer"</h2>
