--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -82,7 +82,9 @@
 
                 <p>2. (but also)Map songs
                 <p>Link for mod: https://osumod.com/
-                <p>Dont be sad/influenced on rejects, always trust they are shit.
+                <p>Dont be sad/influenced on rejects.
+                <p>Idk if I'll get a lot rejects.
+                <p>Anyway... fuck "-[Shady]-", fuck "- Kali -", I've got no patience now. Your shit attitude sucks.
                 <p>Be strong(get rank), be mrekk(get attention).
 
                 <br><br>
