--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -16,6 +16,9 @@
         <div class="content">
             <h1>Setup & Preference</h1> 
             <h2>Intro</h2>
+
+            <p>osu sucks, player sucks.
+
             <div class="container">
                 <p>Setup:
                 <p>&emsp;Mouse: Logitech G102 (2 accel);
@@ -83,8 +86,7 @@
                 <p>2. (but also)Map songs
                 <p>Link for mod: https://osumod.com/
                 <p>Dont be sad/influenced on rejects.
-                <p>Idk if I'll get a lot rejects.
-                <p>Anyway... fuck "-[Shady]-", fuck "- Kali -", I've got no patience now. Your shit attitude sucks.
+                <p>Idk how I feel if I'll get a lot rejects.
                 <p>Be strong(get rank), be mrekk(get attention).
 
                 <br><br>
