--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -75,7 +75,7 @@
             <h1>Misc.</h1>
             <h2>Maps</h2>
             <div class="container">
-                <p>1. (not only)Enjoy maps
+                <p>1. Enjoy maps
                 <p>Except ez, low ar(&lt;~8), old,
                 <p>the "classic" farms, usually I enjoy all other maps,
                 <p>but I still prefer maps I like.
@@ -83,11 +83,11 @@
 
                 <br><br>
 
-                <p>2. (but also)Map songs
+                <p>2. Map songs
                 <p>Link for mod: https://osumod.com/
-                <p>Dont be sad/influenced on rejects.
-                <p>Idk how I feel if I'll get a lot rejects.
-                <p>Be strong(get rank), be mrekk(get attention).
+                <p>3 rejects 1 finished and 2 pending...
+                <p>I guess the result is 4 rejects and 2 finished,
+                <p>which means only 1/3 people like to mod newbies map.
 
                 <br><br>
 
