--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -85,6 +85,16 @@
 
                 <p>2. Map songs
                 <p>Link for mod: https://osumod.com/
+                <p>Mod steps:
+                <p>1. Read the modder's preference
+                <p>2. Upload the link which map to mod
+                <p>3. Wait.
+                <p>4. If he/she reject, and you really try hard to map, the map is clear,
+                <p>   switch to another modder. (the reject modders are bitches sons) 
+                <p>5. Done this stupid shit.
+
+                <br><br>
+
                 <p>3 rejects 1 finished and 2 pending...
                 <p>I guess the result is 4 rejects and 2 finished,
                 <p>which means only 1/3 people like to mod newbies map.
