--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -86,18 +86,17 @@
                 <p>2. Map songs
                 <p>Link for mod: https://osumod.com/
                 <p>Mod steps:
-                <p>1. Read the modder's preference
+                <p>1. Read the modder's preference(If fit then go on, otherwise change)
                 <p>2. Upload the link which map to mod
                 <p>3. Wait.
-                <p>4. If he/she reject, and you really try hard to map, the map is clear,
-                <p>   switch to another modder. (the reject modders are bitches sons) 
+                <p>4. If he/she reject, and you really try hard to map, the map is clear(you can play),
+                <p>   switch to another modder. (fuck these selfless shits)
                 <p>5. Done this stupid shit.
 
                 <br><br>
 
-                <p>3 rejects 1 finished and 2 pending...
-                <p>I guess the result is 4 rejects and 2 finished,
-                <p>which means only 1/3 people like to mod newbies map.
+                <p>Once the ten requests done, I'll count how many modders are polite/impolite.
+                <p>And show the possibility of accept rate + Who are polite/impolite to newbie mapper
 
                 <br><br>
 
